force-app/main/default/objects/Unit__c/fields/Active_Booking__c.field-meta.xml
<CustomField>
    <fullName>Active_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Active Booking for Unit</relationshipLabel>
    <relationshipName>Active_Booking_For_Unit</relationshipName>
    <type>Lookup</type>
</CustomField>