force-app/main/default/objects/Unit__c/fields/Base_Price__c.field-meta.xml
<CustomField>
    <fullName>Base_Price__c</fullName>
    <formula>BSP_Per_Sqft__c * Super_BuiltUp_Area_sqft__c * (1 + (Floor_Rise_Pct__c / 100) + (PLC_Corner_Pct__c / 100) + (PLC_Park_Pct__c / 100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>