force-app/main/default/objects/Unit__c/fields/Blocked_By__c.field-meta.xml
<CustomField>
    <fullName>Blocked_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Blocked By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Blocked Units</relationshipLabel>
    <relationshipName>Blocked_Units</relationshipName>
    <type>Lookup</type>
</CustomField>