force-app/main/default/objects/Unit__c/fields/Blocked_Until__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Until__c</fullName>
    <label>Blocked Until</label>
    <type>DateTime</type>
</CustomField>