force-app/main/default/objects/Unit__c/fields/BSP_Per_Sqft__c.field-meta.xml
<CustomField>
    <fullName>BSP_Per_Sqft__c</fullName>
    <label>BSP per sqft</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>