force-app/main/default/objects/Unit__c/fields/BuiltUp_Area_sqft__c.field-meta.xml
<CustomField>
    <fullName>BuiltUp_Area_sqft__c</fullName>
    <label>Built-up Area (sqft)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>