force-app/main/default/objects/Unit__c/fields/Carpet_Area_sqft__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area_sqft__c</fullName>
    <label>Carpet Area (sqft)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>