force-app/main/default/objects/Unit__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <label>Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>1BHK</fullName><default>false</default><label>1BHK</label></value>
            <value><fullName>2BHK</fullName><default>true</default><label>2BHK</label></value>
            <value><fullName>3BHK</fullName><default>false</default><label>3BHK</label></value>
            <value><fullName>4BHK</fullName><default>false</default><label>4BHK</label></value>
            <value><fullName>Shop</fullName><default>false</default><label>Shop</label></value>
            <value><fullName>Anchor</fullName><default>false</default><label>Anchor</label></value>
            <value><fullName>F&amp;B</fullName><default>false</default><label>F&amp;B</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>