force-app/main/default/objects/Unit__c/fields/Corner_Unit__c.field-meta.xml
<CustomField>
    <fullName>Corner_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corner Unit</label>
    <type>Checkbox</type>
</CustomField>