force-app/main/default/objects/Unit__c/fields/Facing__c.field-meta.xml
<CustomField>
    <fullName>Facing__c</fullName>
    <label>Facing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>North</fullName><default>false</default><label>North</label></value>
            <value><fullName>South</fullName><default>false</default><label>South</label></value>
            <value><fullName>East</fullName><default>false</default><label>East</label></value>
            <value><fullName>West</fullName><default>false</default><label>West</label></value>
            <value><fullName>North-East</fullName><default>false</default><label>North-East</label></value>
            <value><fullName>North-West</fullName><default>false</default><label>North-West</label></value>
            <value><fullName>South-East</fullName><default>false</default><label>South-East</label></value>
            <value><fullName>South-West</fullName><default>false</default><label>South-West</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>