force-app/main/default/objects/Unit__c/fields/Floor_Rise_Pct__c.field-meta.xml
<CustomField>
    <fullName>Floor_Rise_Pct__c</fullName>
    <formula>1.5 * (Floor__c - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor Rise Premium %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>