force-app/main/default/objects/Unit__c/fields/Frontage_ft__c.field-meta.xml
<CustomField>
    <fullName>Frontage_ft__c</fullName>
    <label>Frontage (ft)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>