force-app/main/default/objects/Unit__c/fields/Geo_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>Geo_Coordinates__c</fullName>
    <label>Geo Coordinates</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>