force-app/main/default/objects/Unit__c/fields/Park_Facing__c.field-meta.xml
<CustomField>
    <fullName>Park_Facing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Park Facing</label>
    <type>Checkbox</type>
</CustomField>