force-app/main/default/objects/Unit__c/fields/PLC_Corner_Pct__c.field-meta.xml
<CustomField>
    <fullName>PLC_Corner_Pct__c</fullName>
    <formula>IF(Corner_Unit__c, 3, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PLC Corner %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>