force-app/main/default/objects/Unit__c/fields/PLC_Park_Pct__c.field-meta.xml
<CustomField>
    <fullName>PLC_Park_Pct__c</fullName>
    <formula>IF(Park_Facing__c, 2.5, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PLC Park %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>