force-app/main/default/objects/Unit__c/fields/Shop_Type__c.field-meta.xml
<CustomField>
    <fullName>Shop_Type__c</fullName>
    <label>Shop Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Retail</fullName><default>false</default><label>Retail</label></value>
            <value><fullName>F&amp;B</fullName><default>false</default><label>F&amp;B</label></value>
            <value><fullName>Anchor</fullName><default>false</default><label>Anchor</label></value>
            <value><fullName>Kiosk</fullName><default>false</default><label>Kiosk</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>