force-app/main/default/objects/Unit__c/fields/Status_History__c.field-meta.xml
<CustomField>
    <fullName>Status_History__c</fullName>
    <label>Status History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>