force-app/main/default/objects/Unit__c/fields/Super_BuiltUp_Area_sqft__c.field-meta.xml
<CustomField>
    <fullName>Super_BuiltUp_Area_sqft__c</fullName>
    <label>Super Built-up Area (sqft)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>