force-app/main/default/objects/Unit__c/fields/Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number__c</fullName>
    <label>Unit Number</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>