force-app/main/default/objects/Unit__c/fields/Unit_Status__c.field-meta.xml
<CustomField>
    <fullName>Unit_Status__c</fullName>
    <label>Unit Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Available</fullName><default>true</default><label>Available</label></value>
            <value><fullName>Blocked</fullName><default>false</default><label>Blocked</label></value>
            <value><fullName>Booked</fullName><default>false</default><label>Booked</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>