force-app/main/default/objects/Unit__c/fields/Unit_Type_Class__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type_Class__c</fullName>
    <label>Unit Type Class</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Residential</fullName><default>true</default><label>Residential</label></value>
            <value><fullName>Shop</fullName><default>false</default><label>Shop</label></value>
            <value><fullName>Office</fullName><default>false</default><label>Office</label></value>
            <value><fullName>Kiosk</fullName><default>false</default><label>Kiosk</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>