force-app/main/default/objects/Unit__c/recordTypes/Commercial_Shop.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Shop</fullName>
    <active>true</active>
    <label>Commercial Shop</label>
</RecordType>