force-app/main/default/objects/Unit__c/recordTypes/Residential_Unit.recordType-meta.xml
<RecordType>
    <fullName>Residential_Unit</fullName>
    <active>true</active>
    <label>Residential Unit</label>
</RecordType>