force-app/main/default/objects/Unit__c/validationRules/Floor_In_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Floor_In_Range</fullName>
    <active>true</active>
    <description>Floor must be between 1 and 99 inclusive. Enforced per Naming Convention Appendix Section 7.</description>
    <errorConditionFormula>OR(Floor__c &lt; 1, Floor__c &gt; 99)</errorConditionFormula>
    <errorDisplayField>Floor__c</errorDisplayField>
    <errorMessage>Floor must be between 1 and 99.</errorMessage>
</ValidationRule>