force-app/main/default/objects/Unit__c/validationRules/Unit_Number_In_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Unit_Number_In_Range</fullName>
    <active>true</active>
    <description>Unit Number must be between 1 and 999 inclusive. Enforced per Naming Convention Appendix Section 7.</description>
    <errorConditionFormula>OR(Unit_Number__c &lt; 1, Unit_Number__c &gt; 999)</errorConditionFormula>
    <errorDisplayField>Unit_Number__c</errorDisplayField>
    <errorMessage>Unit Number must be between 1 and 999.</errorMessage>
</ValidationRule>